chore: update jdk and gradle sdk version